<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mnuSyncStore"
        android:icon="@drawable/ic_sync_stores_white"
        android:orderInCategory="1"
        android:title="@string/menu_sync_store"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/mnuAbout" android:title="@string/menu_text_about" android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/mnuCloseSesion" android:title="@string/menu_text_close_sesion" android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/mnuExit" android:title="@string/menu_text_exit" android:orderInCategory="100" app:showAsAction="never" />
</menu>
