<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_action_camera_white"
        android:title="@string/action_photo" />
    <item
        android:id="@+id/action_upload_photo"
        android:icon="@drawable/ic_action_upload"
        android:title="@string/action_upload_photo"/>
    <item
        android:id="@+id/action_delete_photo"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_delete_photo"/>

    <item
        android:id="@+id/action_sharing_photo"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/action_sharing_photo"/>

</menu>