<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/Widget.CardContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_info_general"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textsize_min"
                android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvCampaign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name_campaign" />
    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_user_email" />
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_user_name" />
    <TextView
        android:id="@+id/tvRouteFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre Ruta" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_id_route"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRouteId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="455668" />
    </LinearLayout>


</LinearLayout>
