<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    style="@style/Widget.CardContent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/tvInfoTienda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info_store"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="@dimen/textsize_min"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark" />
                <ImageButton
                    android:id="@+id/imgShared"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_menu_share"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>


    <TextView
        android:id="@+id/tvCampaign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name_campaign" />
    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_user_email" />
    <!--<TextView-->
        <!--android:id="@+id/tvUserName"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/text_user_name" />-->
    <TextView
        android:id="@+id/tvRouteFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre Ruta" />

    <!--<TextView-->
        <!--android:id="@+id/tvRouteId"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="455668" />-->

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#DFDFDF"/>
        <TextView
            android:id="@+id/tvStoreFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre Tienda" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_id_store"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStoreId"
                android:paddingLeft="@dimen/padding_text"
                android:paddingRight="@dimen/padding_text"
                android:background="@color/colorRed"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_address"
                    android:textStyle="bold"
                    android:layout_weight="0.05"
                    android:id="@+id/textView" />
                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_weight="0.90" />

                <ImageButton
                    android:id="@+id/ibEditAddress"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="20dp"
                    android:layout_height="16dp"
                    android:layout_weight="0.05"
                    android:visibility="invisible"
                    android:src="@drawable/ic_action_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_reference"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvReferencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_district"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDistrict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_code_client"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCodClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_type"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOwner"
                android:paddingLeft="@dimen/padding_text"
                android:paddingRight="@dimen/padding_text"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>


</LinearLayout>
